# django-presskit

./: .travis.yml  CODE_OF_CONDUCT.md  LICENSE  MANIFEST.in  README.md  admin.py  models.py  pyproject.toml  requirements.txt  runtests.py  setup.py  urls.py  views.py
.github/workflows/: build.yaml  main.yaml  release-to-pypi.yaml
django_presskit/: admin.py  apps.py  models.py  urls.py  views.py
django_presskit/migrations/: 0002_auto_20181002_1847.py  0003_auto_20181002_1915.py  0004_auto_20190123_0157.py  0004_auto_20190202_2017.py  0005_merge_20190402_1106.py
django_presskit/static/django_presskit/: django_presskit.css
django_presskit/templates/django_presskit/: base.html  company.html  data.xml  navitem.html  no_default.html  project.html
django_presskit/templatetags/: dpk_util.py
migrations/: 0001_initial.py  0001_squashed_0006_auto_20180312_0016.py  0001_squashed_0006_company_contacts.py  0002_auto_20180311_2317.py  0002_auto_20180625_0005.py  0002_project_awards.py  0003_auto_20180311_2321.py  0003_merge_20180907_1608.py  0004_auto_20180311_2337.py  0004_auto_20180907_1609.py  0005_project_company.py  0006_auto_20180312_0016.py
static/django_presskit/: django_presskit.css
templates/django_presskit/: base.html  company.html  project.html
templatetags/: dpk_util.py
tests/: settings.py  test_dpk_util.py  test_models.py  test_views.py  urls.py
